# gitak

./: .gitignore  ETHICS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
bench/: benchmark.py
dashboard/: index.html
docs/: ACCOUNTS.md  EXAMS.md  IMPORT.md  PERFORMANCE.md  sample-attendance.csv  sample-grades.csv
gitak/: __init__.py  _speedups.c  api.py  auth.py  cli.py  config.py  db.py  fastmath.py  importer.py  ml.py  pairing.py  quizzes.py  reports.py  scoring.py  seed.py  teachers.py
tests/: test_attendance.py  test_auth.py  test_fastmath.py  test_gitak.py  test_import.py  test_quizzes.py
